crates/strider/tests/snapshots/v2__mips32le__memory__array_fill.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v6" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "v6" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "7" -> "v6" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v8" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "7" -> "v8" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "5" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "10" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v8" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "11" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "10" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "12" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "13" -> "11" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "14" -> "11" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "15" -> "11" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "16" -> "11" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "16" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "15" [label="init\nf0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="init\nv1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="φ v0", shape=house, fillcolor="#163030"];
  "10" -> "13" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "17" -> "13" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "18" -> "13" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "18" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "19" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "20" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "20" [label="ShiftLeft:u32", shape=box, fillcolor="#2d2d2d"];
  "21" -> "20" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "22" -> "20" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "21" [label="arg[1] ← a1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "19" [label="arg[0] ← a0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "17" [label="init\nv0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "12" [label="φ Mem", shape=house, fillcolor="#163030"];
  "10" -> "12" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "23" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "24" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "24" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "25" -> "24" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "26" -> "24" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "27" -> "24" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "27" [label="arg[2] ← a2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "26" [label="φ a0", shape=house, fillcolor="#163030"];
  "5" -> "26" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "28" -> "26" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "19" -> "26" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "28" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "26" -> "28" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "29" -> "28" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "25" [label="φ Mem", shape=house, fillcolor="#163030"];
  "5" -> "25" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "24" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "23" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "23" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "30" -> "9" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "30" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "31" -> "30" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "31" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "32" -> "31" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "32" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "28" -> "32" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "18" -> "32" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "4" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "21" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "33" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "33" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
